<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="light_blue">#A6B4E0</color>
    <color name="light_green">#A6E0BC</color>
    <color name="dark_brown">#3C3B37</color>
    <color name="darker_brown">#2D2D2D</color>

    <color name="train_red">#c60c30</color>
    <color name="train_blue">#00a1de</color>
    <color name="train_brown">#62361b</color>
    <color name="train_green">#009b3a</color>
    <color name="train_orange">#f9461c</color>
    <color name="train_purple">#522398</color>
    <color name="train_pink">#e27ea6</color>
    <color name="train_yellow">#f9e300</color>

    <color name="train_txt_color_white">#FFFFFF</color>
    <color name="train_txt_color_black">#000000</color>

    <string name="app_name">bus-n-train</string>
    <string name="msg_sys_no_case_defined_error">There is no case defined error occurred.</string>
    <string name="no_list_data">No data is available.</string>

    <string name="train_tracker_base_url">http://lapi.transitchicago.com/api/1.0/ttarrivals.aspx?</string>
    <string name="train_tracker_auth_key">508fc434e3144362839cc82709c6365a</string>
    
    <string name="bus_tracker_base_url">http://www.ctabustracker.com/bustime/api/v1/</string>
    <string name="bus_tracker_auth_key">PcgY9BruYFVN9ZbRtB3qKbeU3</string>
    <string name="bus_button_label">Bus</string>
    <string name="msg_filter">type to filter</string>
    <string name="msg_refresh">Refreshing</string>
    <string name="msg_delete_dialog_title">Delete from Favorite.</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="lbl_last_upate">Last Update:</string>
    <string name="lbl_bus_open_parentice">(Bus </string>
    <string name="lbl_bus_close_parentice">)</string>
    <string name="lbl_to">To </string>
    <string name="lbl_hash"># </string>
    <string name="lbl_star">Favorite</string>
    <string name="toast_getting_routes">Loading bus routes</string>
    <string name="toast_getting_directions">Loading bus directions</string>
    <string name="toast_getting_stops">Loading bus stops</string>
    <string name="toast_getting_predictions">Loading bus predictions</string>

    
    <string name="favorite_button_label">Favorite</string>
    <string name="train_button_label">Train</string>

    <string name="train_route_red">Red Line</string>
    <string name="train_route_blue">Blue Line</string>
    <string name="train_route_brown">Brown Line</string>
    <string name="train_route_green">Green Line</string>
    <string name="train_route_orange">Orange Line</string>
    <string name="train_route_purple">Purple Line</string>
    <string name="train_route_pink">Pink Line</string>
    <string name="train_route_yellow">Yellow Line</string>

    <string name="lbl_train_open_parentice">(L </string>
    <string name="lbl_train_close_parentice">)</string>

</resources>